k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smartrh-backend
  namespace: smartrh
spec:
  replicas: 2
  selector:
    matchLabels:
      app: smartrh-backend
  template:
    metadata:
      labels:
        app: smartrh-backend
    spec:
      containers:
        - name: backend
          image: docker.io/library/smarthr-backend:latest   # ⚠️ ton image locale
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
