k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smartrh-frontend
  namespace: smartrh

spec:
  replicas: 2

  selector:
    matchLabels:
      app: smartrh-frontend

  template:
    metadata:
      labels:
        app: smartrh-frontend

    spec:
      containers:
        - name: frontend

          # ✅ IMAGE CORRECTE (containerd)
          image: docker.io/library/smarthr-frontend:latest

          # ✅ IMPORTANT POUR TON CLUSTER
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 80
