k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smartrh-backend-service
  namespace: smartrh

spec:
  selector:
    app: smartrh-backend

  ports:
    - port: 5000
      targetPort: 5000

  type: ClusterIP
