k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smartrh-frontend-service
  namespace: smartrh

spec:
  type: NodePort

  selector:
    app: smartrh-frontend

  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
