k8s/ingress-smartrh.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smartrh-ingress
  namespace: smartrh
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx

  rules:
    - host: smartrh.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: smartrh-frontend-service
                port:
                  number: 80

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: smartrh-backend-service
                port:
                  number: 5000
